
001 ==> 301494 - Misspelling: "carreful".
002 ==> 299988 - Using MySQL but on DB test got "Database connection test was not successful. Error was: Driver not loaded Driver not loaded".
003 ==> 301482 - Xmp sidecar files not being generated for .3xf raw file type.
004 ==> 301496 - Crash tagging a picture.
005 ==> 291877 - Change tag filters checkboxes to three-states checkboxes to allow filtering by inclusion and by exclusion.
006 ==> 232360 - Zoom reset in Image view for each downloaded image.
007 ==> 298606 - Resize controls in editor are missing.
008 ==> 301072 - Application crash when using curves correction.
009 ==> 301051 - digiKam crashes when changing picture in image editor.
010 ==> 274555 - digikam crashes while histogram computation.
011 ==> 301483 - Sigma raw files and preview (.x3f).
012 ==> 197378 - Fading between photo's in diashow.
013 ==> 302443 - "Open in File Manager" opens Rythmbox in Ubuntu.
014 ==> 288762 - digiKam crash when closing digikam after mass-tagging.
015 ==> 286719 - digiKam hang during startup (deadlock?).
016 ==> 225443 - Fileview preview panning shortcut back to old.
017 ==> 302562 - Rename "View Image" to "Preview".
018 ==> 280142 - Crash in libtiff when files are edited.
019 ==> 300848 - "Reread Metadata From Image" is broken.
020 ==> 302592 - digiKam crashes when I open the Tab "Search Geomap".
021 ==> 302740 - Duplicate rotation/flip entries in image menu, shortcuts not working.
022 ==> 275400 - "Reduced Size Preview" images are blurry and not rotated after upgrade from 1.2.0.
023 ==> 294578 - Problem when moving grouped pictures from one album to another.
024 ==> 295274 - Crash when specific pictures are opened in Image Editor.
025 ==> 287331 - digiKam crashes when reading a large pic collection.
026 ==> 302802 - In albumview, turningkeys have disappeared, whereas these are switched on in setting.
027 ==> 295335 - Pasting a name in the "Who is this?" input field does not activate "Confirm" Button.
028 ==> 

