@@ -39,6 +39,7 @@ BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):
 025 ==> 287331 - digiKam crashes when reading a large pic collection.
 026 ==> 302802 - In albumview, turningkeys have disappeared, whereas these are switched on in setting.
 027 ==> 295335 - Pasting a name in the "Who is this?" input field does not activate "Confirm" Button.
-028 ==> 
+028 ==> 295923 - File always changed even if no metadata should be written to it.
+029 ==> 
 
 
